src/style.css
body {
  background: #23252C;
  box-sizing: border-box;
  font-family: sans-serif;
  margin: 0px;
  min-height: 100%;
  width: 100%;
}


:root {
  margin: 5%;
}


.central-content {
  background-color: #1A1B21;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: auto;
  width: 30%;
}

/* Info section */


.profile-info {
  display: flex;
  width: 30%;
  margin: auto;
  flex-direction: column;
  align-items: center;
  background-color: #1A1B21;
  border-radius: 20px 20px 0px 0px;


}
  .profile-photo {
  width: 100%;
  height: 25rem;
  object-fit: cover;
  border-radius: 20px 20px 0px 0px;
}

.profile-name {
  color:#FFFFFF;
  font-style: normal;
  font-size: 1.5em;
  line-height: 30px;
  text-align: center;
  margin-bottom: 0.3em;
  margin-left: 1em;
  margin-right: 1em;
}

.profile-job {
  color: #F3BF99;
  font-size: 0.8em;
  text-align: center;
  margin: 0;
  font-weight: normal;
}

a {
  font-size: 0.7em;
  text-decoration: none;
  color: #F5F5F5;
  margin-top: 4%;
  margin-bottom: 3%;
}

.link-button {
width: 80%;
}

.mail-button {
  background: #FFFFFF;
  border: 1px solid #D1D5DB;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
  border-radius: 6px;
  font-family: sans-serif;
  font-weight: bold;
  width: 100%;
  height: 34px;
  cursor: pointer;
}

.mail-icon {
  padding-right: 10px;
  width: 16px;
  }

  /* About section */

  .about-section {
    padding-left: 10%;
    padding-right: 10%;
  }

.about-title {
  font-style: normal;
  font-weight: 700;
  font-size: 1em;
  color: #F5F5F5;
}

.about-section > p {
  font-size: 0.8em;
  color: #DCDCDC;
}

/* Interests section */

.interests-section {
  padding-left: 10%;
  padding-right: 10%;
  padding-bottom: 5%;
 
}

.interests-title {
  font-style: normal;
  font-weight: 700;
  font-size: 1em;
  color: #F5F5F5;
}

.interests-section > p {
  font-size: 0.8em;
  color: #DCDCDC;
}

/*Footer*/

.footer-section {
  background-color: #161619;
  width: 30%;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  align-content: center;
  border-radius: 0px 0px 10px 10px;
  margin: auto;
}

.icon-rrss {
  color: #918E9B;
  height: 2rem;
  padding-top: 3%;
  padding-bottom: 3%;
}


@media only screen and (max-width: 600px) {

  .profile-name {
    padding-right: 0.5em;
    padding-left: 0.5em;
    margin-bottom: 0.5em;
    font-size: 1.3em;
  }

  .profile-info {
     width: 60%;
  
  }
    .profile-photo {
    height: 15rem;
  }

  .about-title {
    font-size: 0.9em;
  }

  .interests-title {
    font-size: 0.9em;
  }

  .central-content {
    width: 60%;
  }
  
  .footer-section {
    background-color: #161619;
    width: 60%;
  }

  .about-section > p {
    font-size: 0.6em;
  }

  .interests-section > p {
    font-size: 0.6em;
  }

  .profile-section > a {
    font-size: 0.6em;
    text-decoration: none;
    color: #F5F5F5;
    margin-top: 5%;
    margin-bottom: 4%;
  }

  .icon-rrss {
    height: 1rem;
  }

}

